# chip8

./: .gitignore  CMakeLists.txt  compile_commands.json
src/: CMakeLists.txt  chip_8.cc  chip_8.h  debug.cc  decoder.cc  decoder.h  main.cpp
test/: CMakeLists.txt  opcode_test.cc
